--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,7 +85,7 @@
                       
                         <form action="/" method="POST">
                         <div class="nav-item ml-3 mb-1 input-group">
-                            <input class="form-control form-control-underlined text-black dark" type="text" name="search" placeholder="Search" >
+                            <input class="form-control form-control-underlined text-black dark" type="text" name="search" id="search" placeholder="Search" >
                         </div>
                         </form>
 
@@ -148,11 +148,12 @@
               <p><a href="/tasks">contribute</a></p>
             </div>
             <div class="col">
+              <p><a href="/register">register</a></p>
+              <p><a href="/login">login</a></p>
               <p><a href="/about">about</a></p>
               <p><a href="mailto:team@dcyphr.org">contact</a></p>
             </div>
           </div>
-        <p style="font-family: Lato; font-weight:400;">See a bug? Send a message to team@dcyphr.org</p>
         </div>
 
       <div class="col-6 mt-md-4 float-right">
