--- a/templates/public.html
+++ b/templates/public.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="row" style="min-height: 75%">
-            <div class="m-5 p-4 col border border-dark text-left border20 alternate" style="max-height: 50vh; overflow-y: scroll; font-weight:400;">
+            <div class="m-5 p-4 col border border-dark text-left border20 alternate" style="max-height: 50vh; overflow-y: auto; font-weight:400;">
                 <h4 class="mt-0 border-bottom" style="font-family: Georgia"><strong>Contributions</strong></h4>
                 {% for i in range(length) %}
                 <div class="w-100 py-1 border-bottom pl-2">
