--- a/templates/read.html
+++ b/templates/read.html
@@ -298,7 +298,7 @@
 
 
     <div class="p-0 bg-light border border-dark" id="content-box" >
-        <h1 class="" style="color: #017bff; text-weight: 500; font-family: Georgia" id="title">Contents</h1>
+        <h1 class="" style="color: #017bff; font-family: Georgia" id="title">Contents</h1>
         <ul class="ml-3 text-left" style="list-style: none;">
             {% for i in range(title_length) %}
             <li><a class="contentButton" href="#{{ titles[i] }}" style="font-family: Lato">{{ i + 1 }}.{{ titles[i] }}</a></li>
