--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@ Register
 <div class="p-0 mx-0 w-100">
     <div class="row">
         <div class="col-sm">
-            <div class="card mx-auto border20" style="width: 30rem;">
+            <div class="card mx-auto border20" style="max-width: 30rem;">
                 <form action="/register" method="POST" style="margin:20px; text-align: left;">
                     <div class="row">
                         <div class="form-group col-6">
