--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -7,7 +7,7 @@ Confirm your account
 {% block main %}
 <div class="container mt-5">
     <div class="text-left pl-3" style="font-size: 1.8em;">
-        <p class="ml-4 mt-2" style="font-size: 0.6em; font-family: Georgia">You must confirm your account to sign in. Click below to resend your confirmation email.</p>
+        <p class="ml-4 mt-2" style="font-size: 0.6em; font-family: Georgia">You must confirm your account to sign in. Please check your spam folders. Click below to resend your confirmation email.</p>
         <form method="POST" style="margin:20px; text-align: left;">
             <input type="submit"  class="btn btn-outline-primary border20" value="Resend">
         </form>
