--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
                         <form action="/" method="POST">
                         <div class="nav-item ml-3 mb-1 input-group">
-                            <input class="form-control-underlined form-control text-white" style="background-color: rgb(19,19,19)" type="text" name="search" placeholder="Search">
+                            <input class="form-control-underlined form-control text-white" style="background-color: rgb(19,19,19)" type="text" name="search" id="search" placeholder="Search">
                         </div>
                         </form>
 
@@ -45,21 +45,7 @@
                 {% endif %}
             </div>
         </nav>
-        <script defer>
-            $(document).ready(function(){
-              $(".scroll").on('click', function(event) {
-                if (this.hash !== "") {
-                  event.preventDefault();
-                  var hash = this.hash;
-                  $('html, body').animate({
-                    scrollTop: $(hash).offset().top
-                  }, 800, function(){
-                    window.location.hash = hash;
-                  });
-                }
-              });
-            });
-        </script>
+        
         <script>
            window.onload = function(){
                 //hide the preloader
