--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -117,11 +117,12 @@
               <p><a href="/tasks">contribute</a></p>
             </div>
             <div class="col">
+              <p><a href="/register">register</a></p>
+              <p><a href="/login">login</a></p>
               <p><a href="/about">about</a></p>
               <p><a href="mailto:team@dcyphr.org">contact</a></p>
             </div>
           </div>
-        <p style="font-family: Lato; font-weight:400;">See a bug? Send a message to team@dcyphr.org</p>
         </div>
 
       <div class="col-6 mt-md-4 float-right">
