--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,11 @@
 {% block main %}
 <div class="main" style="font-family:Lato">
     <div class="container mt-5" style="min-height: 100vh">
+        {% if message %}
+        <div class="alert alert-info" role="alert">
+            Hey there &#128075;! Would you like to <a href="/tasks">contribute</a> or <a href="/request">request</a>?
+        </div>
+        {% endif %}
         <div class="row h-25">
             <div class="col-2">
                 <i class="fa fa-user-circle border-0 fa-5x" aria-hidden="true" style="color: #017bff; margin-top: 10px"></i>
@@ -38,7 +43,7 @@
         </div>
 
         <div class="row" style="min-height: 75%">
-            <div class="my-5 mx-auto p-4 col-xl-10 col-12 border border-dark border20 text-left alternate" style="max-height: 50vh; overflow-y: scroll;">
+            <div class="my-5 mx-auto p-4 col-xl-10 col-12 border border-dark border20 text-left alternate" style="max-height: 50vh; overflow-y: auto;">
                 <h4 class="mt-0 border-bottom" style="font-family:Georgia"><strong>Contributions</strong></h4>
                 {% for i in range(length) %}
                 <div class="w-100 py-1 border-bottom pl-2">
