updated explore page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -439,6 +439,10 @@ dl:nth-of-type(odd) {
 
 
 @media screen and (max-width: 481px){
+.b20t{
+    margin-top:0 !important;
+    margin-bottom: 0 !important;
+}
 .navbar-brand img{
     margin-top: 0 !important;
 }
