--- a/templates/about.html
+++ b/templates/about.html
@@ -45,8 +45,8 @@
 
 <p style="font-family: Lato; font-size: 3vh" class="py-3 mb-0">What's your role in the <span style="color: #017bff">dcyphr</span> network?</p>
     <picture class="w-100">
-        <source type="image/webp" srcset="{{ url_for('static', filename='dcyphrnet.webp') }}">
-        <img class="w-100 pb-5 mb-5 border-bottom" src="{{ url_for('static', filename='dcyphrnet.png') }}" alt="">
+        <source type="image/webp" srcset="{{ url_for('static', filename='pages/dcyphrnet.webp') }}">
+        <img class="w-100 pb-5 mb-5 border-bottom" src="{{ url_for('static', filename='pages/dcyphrnet.png') }}" alt="">
     </picture>
 
 <div class="border-bottom w-100">
