--- a/templates/register.html
+++ b/templates/register.html
@@ -33,21 +33,21 @@ Register
                     </div>
                     <div class="form-group">
                         <label for="username" class="font-weight text-muted" style="font-size:12px">Username</label>
-                        <input type="text" id="username" class="form-control border20" style="width:100%;" name="username">
+                        <input type="text" id="username" class="form-control border20" style="width:100%;" name="username" required>
                     </div>
                     <div class="form-group">
                         <label for="password" class="font-weight text-muted" style="font-size:12px">Password</label>
-                        <input type="password" id="password" class="form-control border20" style="width:100%" name="password">
+                        <input type="password" id="password" class="form-control border20" style="width:100%" name="password" required>
                     </div>
 
                     <div class="form-group">
                         <label for="confirmPassword" class="font-weight text-muted" style="font-size:12px">Confirm password</label>
-                        <input type="password" id="confirmPassword" class="form-control border20" style="width:100%" name="confirm">
+                        <input type="password" id="confirmPassword" class="form-control border20" style="width:100%" name="confirm" required>
                     </div>
 
                     <div class="form-group">
                         <label for="email" class="font-weight text-muted" style="font-size:12px">Email</label>
-                        <input type="text" id="email" class="form-control border20" style="width:100%" name="email">
+                        <input type="text" id="email" class="form-control border20" style="width:100%" name="email" required>
                     </div>
                     <div class="form-check">
                       <label class="form-check-label" style="font-family:Arial">
