--- a/templates/explore.html
+++ b/templates/explore.html
@@ -8,63 +8,69 @@
 <div class="main">
     <div class="container">
         <h1 class="my-5 text-left" style="font-family:Lato; font-weight:400">Explore <br> &nbsp<small style="color: #017bff; font-size: 1.75vh"><a href="/browse/0">View all</small></h1>
-        <div class="row" style="">
+        <div class="row">
             {% for i in range(tags | length) %}
-            <div class="col-12 col-lg-4 col-md-6 p-0 text-left mx-auto mb-5" style="min-height: 45vh;">
-                <a class="" href="/tag/{{ tags[i]['id'] }}/0" style="text-decoration:none;">
+            <div class="col-lg-4 col-md-6 text-left mx-auto mb-5" style="min-height: 45vh;">
+                <a href="/tag/{{ tags[i]['id'] }}/0" style="text-decoration:none;">
                     <div class="h-100 p-0 mx-auto border20" style="width:80%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato;">
-                        {% if i % 5 == 0 %}
-                        <div class="w-100 b20t" style="background: rgba(1, 123, 255, 0.38); height:50%"></div>
-                        {% elif i % 5 == 1 %}
-                        <div class="w-100 b20t" style="background: rgba(67, 150, 90, 0.5); height: 50%"></div>
-                        {% elif i % 5 == 2 %}
-                        <div class="w-100 b20t" style="background: rgba(123, 67, 150, 0.46); height:50%"></div>
-                        {% elif i % 5 == 3 %}
-                        <div class="w-100 b20t" style="background: rgba(195, 11, 56, 0.5); height:50%"></div>
+                        {% if tags[i]['title'] == 'Biochemistry' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height: 50% !important;" src="{{ url_for('static', filename='pages/biochemistry.jpg') }}" alt="Biochemistry">
+                        {% elif tags[i]['title'] == 'Neuroscience' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/neuroscience.jpg') }}" alt="Neuroscience">
+                        {% elif tags[i]['title'] == 'COVID-19' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/covid.jpg') }}" alt="COVID-19">
+                        {% elif tags[i]['title'] == 'Evolutionary Biology and Ecology' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/evolution.jpg') }}" alt="Evolutionary Biology">
+                        {% elif tags[i]['title'] == 'Cell Biology' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/stem.jpg') }}" alt="Cell Biology">
+                        {% elif tags[i]['title'] == 'Genetics and Developmental Biology' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/genetics.jpg') }}" alt="Genetics">
+                        {% elif tags[i]['title'] == 'Social Sciences' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/social.jpg') }}" alt="Social Sciences">
+                        
                         {% else %}
-                        <div class="w-100 b20t" style="background: rgba(236, 91, 9, 0.48); height:50%"></div>
+                        <div class="w-100 b20t" style="background: rgba(1, 123, 255, 0.38); height:50%"></div>
+                        
                         {% endif %}
-                        <div class="p-1 px-4 m-0">
-                            <div style="max-height:15vh; min-height:15vh; overflow-y:auto">
-                            <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;">{{ tags[i]['title'] }}</h3>
+                        <div>
+                            <div class="px-4 pt-2" style="max-height:15vh; min-height:15vh;">
+                                <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;">{{ tags[i]['title'] }}</h3>
 
-                                <div class="p-0 m-0 pb-4">
+                                <div style="max-height: 10vh; overflow-y:auto">
 
                                     {{ tags[i]['text'] }}
 
                                 </div>
+                                
                             </div>
 
-
-                            <div class="row">
-                                <div class="col-8 pl-1 p-0 mt-3 text-muted">
-                                    {{ tags[i]['count'] }} summaries
-                                </div>
+                            <div class="text-muted px-4 mt-5">
+                                {{ tags[i]['count'] }} summaries
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             {% endfor %}
-            <div class="col-12 col-lg-4 col-md-6 p-0 text-left mx-auto mb-5" style="min-height: 45vh;">
-                <a class="" href="/method/0" style="text-decoration:none;">
+            <div class="col-lg-4 col-md-6 text-left mx-auto mb-5" style="min-height: 45vh;">
+                <a href="/method/0" style="text-decoration:none;">
                     <div class="h-100 p-0 mx-auto border20" style="width:80%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato;">
-                        <div class="w-100 b20t" style="background: rgba(1, 123, 255, 0.38); height:50%"></div>
-                        <div class="p-1 px-4 m-0">
-                            <div style="max-height:15vh; min-height:15vh; overflow-y:auto">
-                            <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;">Glossary</h3>
+                        <img class="w-100 b20t" style="object-fit: cover !important; height: 50% !important;" src="{{ url_for('static', filename='pages/glossary.jpg') }}" alt="Glossary">
+                        <div>
+                            <div class="px-4 pt-2" style="max-height:15vh; min-height:15vh;">
+                                <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;">Glossary</h3>
 
-                                <div class="p-0 m-0 pb-4">
+                                <div style="max-height: 10vh; overflow-y:auto">
 
                                     Explore our collection of experimental terms that have been dcyphr-d.
 
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-8 pl-1 p-0 mt-3 text-muted">
-                                    {{ method_length }} summaries
-                                </div>
+                            
+                            <div class="text-muted px-4 mt-5">
+                                {{ method_length }} summaries
                             </div>
+                            
                         </div>
                     </div>
                 </a>
