--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -15,9 +15,9 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" defer>
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' defer>
 
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
 
-        <link href="/static/styles.css" rel="stylesheet" defer>
+        <link href="/static/css/styles.css" rel="stylesheet" defer>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css" defer>
 
         
