--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,9 +11,9 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" defer>
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' defer>
 
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
 
-        <link href="/static/styles.css" rel="stylesheet" defer>
+        <link href="/static/css/styles.css" rel="stylesheet" defer>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css" defer>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -28,7 +28,7 @@
 
         <div id="preloader">
             <div id="status" class="text-center">
-                <img style="margin-top: 20vh" src="{{ url_for('static', filename='dna.svg') }}" alt="Loading...">
+                <img style="margin-top: 20vh" src="{{ url_for('static', filename='logos/dna.svg') }}" alt="Loading...">
             </div>
         </div>
         <script>
@@ -63,15 +63,16 @@
 
     {% block summernote %}{% endblock %}
 
-
+        
         <title>dcyphr | {% block title %}{% endblock %}</title>
+        
 
     </head>
 
     <body>
 
         <nav class="navbar navbar-expand-md navbar-light border" style="font-family: Lato; font-weight:400 !important;">
-          <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='dcyphr_logo_blue.png') }}" alt="" width="60" height="58"></a>
+          <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='logos/dcyphr_logo_blue.png') }}" alt="" width="60" height="58"></a>
 
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
