--- a/templates/profile.html
+++ b/templates/profile.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="col-xl-2 col-md-4 col-8 my-5" style="">
-                <a href="/password" style="text-decoration:none">
+                <a href="/password/{{ token }}" style="text-decoration:none">
                     <div class="w-100 btn btn-outline-primary border20 my-3">
                         Change Password
                     </div>
