--- a/templates/explore.html
+++ b/templates/explore.html
@@ -10,9 +10,9 @@
         <h1 class="my-5 text-left" style="font-family:Lato; font-weight:400">Explore <br> &nbsp<small style="color: #017bff; font-size: 1.75vh"><a href="/browse/0">View all</small></h1>
         <div class="row">
             {% for i in range(tags | length) %}
-            <div class="col-lg-4 col-md-6 text-left mx-auto mb-5" style="min-height: 45vh;">
+            <div class="col-lg-4 col-md-6 text-left mx-auto mb-5 explore_card" style="min-height: 45vh;">
                 <a href="/tag/{{ tags[i]['id'] }}/0" style="text-decoration:none;">
-                    <div class="h-100 p-0 mx-auto border20" style="width:80%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato;">
+                    <div class="h-100 p-0 pb-5 mx-auto border20" style="width:100%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato; position: relative;">
                         {% if tags[i]['title'] == 'Biochemistry' %}
                         <img class="w-100 b20t" style="object-fit: cover !important; height: 50% !important;" src="{{ url_for('static', filename='pages/biochemistry.jpg') }}" alt="Biochemistry">
                         {% elif tags[i]['title'] == 'Neuroscience' %}
@@ -44,7 +44,7 @@
                                 
                             </div>
 
-                            <div class="text-muted px-4 mt-5">
+                            <div class="text-muted px-4" style="position: absolute; bottom:2vh;">
                                 {{ tags[i]['count'] }} summaries
                             </div>
                         </div>
@@ -52,9 +52,9 @@
                 </a>
             </div>
             {% endfor %}
-            <div class="col-lg-4 col-md-6 text-left mx-auto mb-5" style="min-height: 45vh;">
+            <div class="col-lg-4 col-md-6 text-left mx-auto mb-5 explore_card" style="min-height: 45vh;">
                 <a href="/method/0" style="text-decoration:none;">
-                    <div class="h-100 p-0 mx-auto border20" style="width:80%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato;">
+                    <div class="h-100 p-0 pb-5 mx-auto border20" style="width:100%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato; position: relative;">
                         <img class="w-100 b20t" style="object-fit: cover !important; height: 50% !important;" src="{{ url_for('static', filename='pages/glossary.jpg') }}" alt="Glossary">
                         <div>
                             <div class="px-4 pt-2" style="max-height:15vh; min-height:15vh;">
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                             
-                            <div class="text-muted px-4 mt-5">
+                            <div class="text-muted px-4" style="position: absolute; bottom: 2vh;">
                                 {{ method_length }} summaries
                             </div>
                             
