--- a/templates/explore.html
+++ b/templates/explore.html
@@ -27,13 +27,17 @@
                         <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/genetics.jpg') }}" alt="Genetics">
                         {% elif tags[i]['title'] == 'Social Sciences' %}
                         <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/social.jpg') }}" alt="Social Sciences">
-                        
+                        {% elif tags[i]['title'] == 'Epidemiology' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/epidemiology.jpg') }}" alt="Social Sciences">
+                        {% elif tags[i]['title'] == 'Astronomy' %}
+                        <img class="w-100 b20t" style="object-fit: cover !important; height:50% !important" src="{{ url_for('static', filename='pages/astronomy.jpg') }}" alt="Social Sciences">
+
                         {% else %}
                         <div class="w-100 b20t" style="background: rgba(1, 123, 255, 0.38); height:50%"></div>
                         
                         {% endif %}
                         <div>
-                            <div class="px-4 pt-2" style="max-height:15vh; min-height:15vh;">
+                            <div class="px-4 pt-3" style="max-height:15vh; min-height:15vh;">
                                 <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;">{{ tags[i]['title'] }}</h3>
 
                                 <div style="max-height: 10vh; overflow-y:auto">
@@ -57,7 +61,7 @@
                     <div class="h-100 p-0 pb-5 mx-auto border20" style="width:100%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato; position: relative;">
                         <img class="w-100 b20t" style="object-fit: cover !important; height: 50% !important;" src="{{ url_for('static', filename='pages/glossary.jpg') }}" alt="Glossary">
                         <div>
-                            <div class="px-4 pt-2" style="max-height:15vh; min-height:15vh;">
+                            <div class="px-4 pt-3" style="max-height:15vh; min-height:15vh;">
                                 <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;">Glossary</h3>
 
                                 <div style="max-height: 10vh; overflow-y:auto">
