--- a/templates/results.html
+++ b/templates/results.html
@@ -8,29 +8,31 @@
 <div class="container mt-5">
     <div class="text-left pl-3" style="font-size: 1.8em; ">
         <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
-        <div class="d-inline ml-2" style="color: #017bff">Showing search results for "<span style="color: orange">{{ search }}</span>":</div>
+        <div class="d-inline ml-2" style="color: #017bff">{{ results | length }} search results for "<span style="color: orange">{{ search }}</span>":</div>
         <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px"></p>
     </div>
 {% if length == 0 %}
-<picture>
-    <source type="image/webp" srcset="{{ url_for('static', filename='errors/noresults.webp') }}">
-    <img  class="searchResults" src="errors/nosearchresults.png" alt="">
-</picture>
+<div style="overflow-y:hidden">
+    <picture>
+        <source type="image/webp" srcset="{{ url_for('static', filename='errors/noresults.webp') }}">
+        <img  class="searchResults" src="{{ url_for('static', filename='errors/nosearchresults.png')}}" alt="">
+    </picture>
+</div>
 {% else %}
-<ul style="text-align: left; list-style: none">
-    {% for i in range(length) %}
-        <li class="mx-3 py-3 border-bottom border-dark">
-            <div>
-                <a href="{{links[i]}}" class="disabledButton" style="color: #017bff; font-size: 1.6em; font-weight: 200;">{{ results[i]["article"] }}</a>
-                <p class="" >Dcyphr-d by <a href="public/{{ results[i]['id'] }}" style="color: Red">@{{ results[i]["username"] }}</a></p>
-            </div>
+    <ul style="text-align: left; list-style: none">
+        {% for i in range(length) %}
+            <li class="mx-3 py-3 border-bottom border-dark">
+                <div>
+                    <a href="/read/{{results[i]['summary_id']}}" class="disabledButton" style="color: #017bff; font-size: 1.6em; font-weight: 200;">{{ results[i]["article"] }}</a>
+                    <p class="" >dcyphr-d by <a href="public/{{ results[i]['id'] }}" style="color: Red">{{ results[i]["first"] }} {{ results[i]["last"] }}</a> on {{ results[i]['summary_date'] }}</p>
+                </div>
 
-            <div style="list-style: none">
-                <p class="ml-2">{{ preview[i] }}...</p>
-            </div>
-        </li>
-    {% endfor %}
-</ul>
+                <div style="list-style: none">
+                    <p class="ml-2">{{ results[i]['summary'] | safe }}</p>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
 {% endif %}
 </div>
 
